Lab 08 edits and LaTeX export

--- a/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.tex
+++ b/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.tex
@@ -376,7 +376,7 @@ flow chart symbols: oval, rectangle, diamond and parallelogram.
     \hypertarget{lab}{%
 \subsection{Lab}\label{lab}}
 
-Create a new Python script called \textbf{taylor\_series.py} which will
+Create a new Python script called \textbf{taylor\_series.ipynb} which will
 contain a user-defined function called \texttt{taylor()}. The
 \texttt{taylor()} function will have the function name, inputs, outputs
 and doc string information as shown.
@@ -449,7 +449,7 @@ Below are a couple of tips to help you complete the lab:
 \begin{itemize}
 \tightlist
 \item
-  Start working with your .py-file as a regular script (not a function)
+  Start working with your .ipynb-file as a regular script (not a function)
   with hard coded input values. This way you can easily run and re-run
   it for testing.
 \item
@@ -465,7 +465,7 @@ Below are a couple of tips to help you complete the lab:
   validation, before changing it into a function.
 \item
   Now call your function \texttt{taylor()} from within the
-  \textbf{taylor\_series.py} file . It is easier to change values and
+  \textbf{taylor\_series.ipynb} file . It is easier to change values and
   re-run this way, versus importing the function and calling
   \texttt{\textgreater{}\textgreater{}\textgreater{}taylor(\textquotesingle{}sin\textquotesingle{},4,10)}
   from the Python REPL.
@@ -479,7 +479,7 @@ Below are a couple of tips to help you complete the lab:
 \subsection{Deliverables}\label{deliverables}}
 
 Once you are satisfied that your file meets all the requirements,
-suppress all screen output, save your \textbf{taylor\_series.py} file and \textbf{lab7.ipynb} file, and submit
+suppress all screen output, save your \textbf{taylor\_series.ipynb} file, and submit
 it to appropriate D2L folder.
 
     \hypertarget{by-p.-kazarinoff-portland-community-college-2019}{%
