--- a/ENGR114-Labs/Lab08-External_Hardware/preable.tex
+++ b/ENGR114-Labs/Lab08-External_Hardware/preable.tex
@@ -1,4 +1,23 @@
-   %% preamble.tex
+%% ENGR114_lab_assignment.tplx %%
+%
+% Built off of the article.tplx template %
+
+
+% Default to the notebook output style
+
+    
+
+
+% Inherit from the specified cell style.
+
+
+
+
+    
+    \documentclass[11pt]{article}
+
+    
+    
     %% installed packages_rev2.tplx %%
 
 \usepackage{fancyhdr}
@@ -8,7 +27,7 @@
 \usepackage{titlesec}
 % no indent on any paragraphs, vertical spacing between paragraphs is set to 1em
 \usepackage[]{parskip}  % add [skip=1em] if the compiler will allow.
-\usepackage{float}
+
 % for MATLAB syntax highlighting
 \usepackage{listings}             % Include the listings-package
 \definecolor{mygray}{rgb}{0.8,0.8,0.8} % color values Red, Green, Blue
@@ -72,7 +91,7 @@
     
     %% lab_title.tplx %% 
  
-\newcommand{\labtitle}{Lab09 External Hardware} 
+\newcommand{\labtitle}{Lab08 External Hardware} 
     %% header_and_footer.tplx %%
 
 % Header and Footer
