--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ENGR114 Syllabus - Winter 2019"
+    "# ENGR114 Syllabus - Fall 2019"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "\n",
     " * Instructor: Peter Kazarinoff\n",
     " * Instructor email: peter.kazarinoff@pcc.edu\n",
-    " * Instructor phone: 971-722-8065(email is the best way to get in touch)\n",
+    " * Instructor phone: 971-722-8065 (email is the best way to get in touch)\n",
     " * Office Hours: Mon 9:30am-11:30am and Wed 1pm-4pm\n",
     " * Office Location: SY ST200"
    ]
@@ -34,25 +34,24 @@
     " \n",
     "### Course Meeting Times and Locations\n",
     "\n",
-    " * Lecture: Tues 1pm-3:50pm in AM106\n",
-    " * Lab: Thurs 1pm-3:50pm in AM106\n",
+    " * Lecture: Mon 9am-11:50am in AM107\n",
+    " * Lab: Wed 9am-11:50am in AM107\n",
     " \n",
     "## Course Materials\n",
     "\n",
     "### Textbook\n",
     "\n",
-    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available online at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon soon.\n",
+    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available on-line at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon.com: [https://amazon.com/](https://amazon.com/)\n",
     "\n",
     "### Other course materials\n",
     "\n",
     " * USB thumb drive. 1GB size or larger will work fine. Bring to every class.\n",
     " * Scientific Calculator\n",
     " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email account and then open the course programming environment.\n",
-    " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Microcontroller and USB cable will be available for purchase for $10.\n",
+    " * A laptop or home computer is not required for the course. If you use your own computer, you can download the same programming environment used on campus. The download is free and available at [https://anaconda.com/distribution](https://www.anaconda.com/distribution/)\n",
+    " * The Engineering Department will provide you with an Arduino and Circuit Playground Express microcontroller for you to use during labs that require them. If you would like to purchase your own microcontrollers to use outside of class, use the following links: [sparkfun.com/products/13975](https://www.sparkfun.com/products/13975) [adafruit.com/product/3333](https://www.adafruit.com/product/3333)\n",
     "\n",
-    "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks that have an Internet connection. \n",
-    "\n",
-    "You can also download and install the programming environment on a home computer. The download is free and available at: [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
+    "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks that have an Internet connection. "
    ]
   },
   {
@@ -113,7 +112,7 @@
    "source": [
     "### Group Project\n",
     "\n",
-    "You will complete a group project throughout the quarter. Project delivery will be at the end of the quarter. Students must be present when their project is delivered to receive credit. During the quarter, there will be occasional project assignments to complete. See D2L for the project description and grading details. **No late projects will be accepted**."
+    "You will complete a group project throughout the quarter. Project delivery will be at the end of the quarter during finals week. Students must be present when their project is delivered to receive credit. During the quarter, there will be occasional project assignments to complete. See D2L for the project description and grading details. **No late projects will be accepted**."
    ]
   },
   {
@@ -155,7 +154,7 @@
     "\n",
     "Students should check their PCC email at least three times a week to ensure receipt of announcements and essential information about the class.\n",
     "\n",
-    "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the Registration Office.  To remove tuition charges, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
+    "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the PCC Registration Office.  To remove tuition charges, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
     "\n",
     "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather, please check the [PCC Website](http://www.pcc.edu/), call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
    ]
@@ -186,7 +185,7 @@
     "\n",
     " * [LGBTQ Resources and Programming at Sylvania](https://www.pcc.edu/resources/qrc/sylvania/)\n",
     "\n",
-    "[Student Rights and Responsibilities](http://www.pcc.edu/about/policy/student-rights/), Includes information on Children on PCC Properties, Academic Integrity Policy, Policy on Student Conduct\n",
+    "[Student Rights and Responsibilities](http://www.pcc.edu/about/policy/student-rights/), Includes information on children on PCC Properties, Academic Integrity Policy, Policy on Student Conduct.\n",
     "     \n",
     "#### Additional Classroom Rules\n",
     "     \n",
@@ -246,18 +245,17 @@
     "\n",
     "| Week | Lecture | Lab | Homework Due |\n",
     "| --- | --- | --- | --- |\n",
-    "| Week 1 | The Python REPL | Lab 1: Calculations | |\n",
+    "| Week 1 | The Python REPL | Lab 1: Circuit Python | |\n",
     "| Week 2 | Data types and variables | Lab 2: Data Types | Homework 1 |\n",
     "| Week 3 | Data structures, input and print | Lab 3: User Input | Homework 2 |\n",
     "| Week 4 | Plotting | Lab 4: Plotting | Homework 3 |\n",
     "| Week 5 | Functions | Lab 5: Web API's | Homework 4 |\n",
     "| Week 6 | Review | **Exam 1** | |\n",
-    "| Week 7 | If, elif, else | Lab 6: Audio Filtering | |\n",
+    "| Week 7 | If, elif, else | Lab 6: Image Editing | |\n",
     "| Week 8 | Loops | Lab 7: Taylor Series | Homework 5 |\n",
-    "| Week 9 | MicroPython | Lab 8: MicroPython | Homework 6 |\n",
-    "| Week 9 | External Hardware | Lab 9: External Hardware | |\n",
+    "| Week 9 | External Hardware | Lab 8: External Hardware | |\n",
     "| Week 10 | Review | **Exam 2** | |\n",
-    "| Finals Week | Project Delivery | |"
+    "| Finals Week | Final Project Delivery | |"
    ]
   },
   {
