--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -16,7 +16,7 @@
     " * Instructor: Peter Kazarinoff\n",
     " * Instructor email: peter.kazarinoff@pcc.edu\n",
     " * Instructor phone: 971-722-8065 (email is the best way to get in touch)\n",
-    " * Office Hours: Mon 9:30am-11:30am and Wed 1pm-4pm\n",
+    " * Office Hours: Tues 9:00am-12:00pm and Fri 9:30am-11:30am\n",
     " * Office Location: SY ST200"
    ]
   },
@@ -30,28 +30,28 @@
     "\n",
     " * Credits: 4\n",
     " * Prerequisites: ENGR 101 or department-approved equivalent\n",
-    " * Summary: Introduces computer programming terminology and techniques as applied to specific engineering applications. Topics include electrical circuit analysis, audio signal processing, image processing, and interfacing with hardware such as microcontrollers and analog-to-digital converters application. The course covers reading and documenting code, compiling and testing code, and debugging and correcting defects found in code. \n",
+    " * Summary: Introduces computer programming terminology and techniques as applied to specific engineering applications. Topics include electrical circuit analysis, audio signal processing, image processing, and interfacing with hardware such as microcontrollers and analog-to-digital converters application. The course covers reading and documenting code, running and testing code, and debugging and correcting defects found in code. \n",
     " \n",
     "### Course Meeting Times and Locations\n",
     "\n",
-    " * Lecture: Mon 9am-11:50am in AM107\n",
-    " * Lab: Wed 9am-11:50am in AM107\n",
+    " * Lecture: CRN 43936-Mon 9am-11:50am in AM107, CRN 46130-Tues 1pm-3:50pm in AM107\n",
+    " * Lab:  CRN 43936-Wed 9am-11:50am in AM107, CRN 46130-Thurs 1pm-3:50pm in AM107\n",
     " \n",
     "## Course Materials\n",
     "\n",
     "### Textbook\n",
     "\n",
-    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available on-line at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon.com: [https://amazon.com/](https://amazon.com/)\n",
+    "_Problem Solving with Python 3.7 Edition_ by Peter D. Kazarinoff. Available on-line at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon.com: [https://amazon.com/](https://amazon.com/)\n",
     "\n",
     "### Other course materials\n",
     "\n",
     " * USB thumb drive. 1GB size or larger will work fine. Bring to every class.\n",
     " * Scientific Calculator\n",
-    " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email account and then open the course programming environment.\n",
+    " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email account and then open the course programming environment. You can also access use Google CoLab [https://colab.research.google.com](https://colab.research.google.com) with your @pcc.edu account.\n",
     " * A laptop or home computer is not required for the course. If you use your own computer, you can download the same programming environment used on campus. The download is free and available at [https://anaconda.com/distribution](https://www.anaconda.com/distribution/)\n",
     " * The Engineering Department will provide you with an Arduino and Circuit Playground Express microcontroller for you to use during labs that require them. If you would like to purchase your own microcontrollers to use outside of class, use the following links: [sparkfun.com/products/13975](https://www.sparkfun.com/products/13975) [adafruit.com/product/3333](https://www.adafruit.com/product/3333)\n",
     "\n",
-    "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks that have an Internet connection. "
+    "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks, tablets that have an Internet connection. "
    ]
   },
   {
@@ -67,7 +67,7 @@
    "source": [
     "### Homework\n",
     "\n",
-    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course.**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score of quarter will be dropped**.  All homework assignments are weighted equally. Check D2L for assignments, homework format, and submission deadlines."
+    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course.**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score of quarter will be dropped**.  All homework assignments are weighted equally. Check D2L for assignments, homework format, and submission deadlines. Homework will be graded on format, completion, and running without any errors."
    ]
   },
   {
@@ -76,15 +76,15 @@
    "source": [
     "### Exams\n",
     "\n",
-    "If a student is unable to take the exam when it is scheduled, it is the student's responsibility to notify the instructor **at least 1 week prior to the date of an exam**. Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students who have testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed.\n",
+    "If a student is unable to take the exam when it is scheduled, it is the student's responsibility to notify the instructor **at least 1 week prior to the date of an exam**. Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students who have testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed. There will be two Exams in the course. One Midterm Exam and one Exam the last week of classes.\n",
     "\n",
     "#### During Exams:\n",
     "\n",
     " * Exams will be taken during lecture or lab time in the classroom.\n",
     " * Exams will have two parts, a written portion, and a computer portion\n",
-    "   * During the written portion you cannot use Python and computer monitors must be off\n",
-    "   * During the computer portion, you must use Python on the computers in the classroom. No student laptops allowed on exams.\n",
-    " * Generally, a calculator and one page of notes are allowed on the exams.\n",
+    "   * During the written portion you cannot use a computer and computer monitors must be off\n",
+    "   * During the computer portion, you must use the computers in the classroom. No student laptops allowed on exams.\n",
+    " * Generally, a calculator and one page of notes are allowed on the exams, both during the written and computer portions\n",
     " * You must complete each exam during the exam period. Uploads after the deadline will receive zero credit."
    ]
   },
@@ -152,7 +152,7 @@
     "\n",
     "Attendance at all labs and lectures is required.  Attendance may be used in the grading process.  Tardy students may be denied entry to class or docked in credit for in-class assignments.  Poor attendance or repeated tardiness will have an adverse effect on a student's grade for the course.\n",
     "\n",
-    "Students should check their PCC email at least three times a week to ensure receipt of announcements and essential information about the class.\n",
+    "Students should check their @pcc.edu email at least three times a week to ensure receipt of announcements and essential information about the class.\n",
     "\n",
     "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the PCC Registration Office.  To remove tuition charges, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
     "\n",
@@ -250,11 +250,12 @@
     "| Week 3 | Data structures, input and print | Lab 3: User Input | Homework 2 |\n",
     "| Week 4 | Plotting | Lab 4: Plotting | Homework 3 |\n",
     "| Week 5 | Functions | Lab 5: Web API's | Homework 4 |\n",
-    "| Week 6 | Review | **Exam 1** | |\n",
+    "| Week 6 | **Exam 1** | No Lab  | |\n",
     "| Week 7 | If, elif, else | Lab 6: Image Editing | |\n",
     "| Week 8 | Loops | Lab 7: Taylor Series | Homework 5 |\n",
-    "| Week 9 | External Hardware | Lab 8: External Hardware | |\n",
-    "| Week 10 | Review | **Exam 2** | |\n",
+    "| Week 9 | External Hardware | Lab 8: External Hardware | Homework 6 |\n",
+    "| Week 10 | MicroPython | No Lab | |\n",
+    "| Week 11 | Review | **Exam 2** | |\n",
     "| Finals Week | Final Project Delivery | |"
    ]
   },
